--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,6 +1,6 @@
 name: CMake
 
-on: [push]
+on: [push, pull_request]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -13,9 +13,6 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        mongodb-version: [4.0, 4.2, 4.4]
     services:
           # Label used to access the service container
           redis:
@@ -32,16 +29,21 @@ jobs:
               - 6379:6379
     steps:
     - uses: actions/checkout@v2
-
+    - uses: actions/setup-python@v1
+      
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory ${{runner.workspace}}/build
-    
-    - name: Start MongoDB
+      
+    - name: MongoDB in GitHub Actions
+      # You may pin to the exact commit or the version.
+      #https://github.com/supercharge/mongodb-github-action
+      # uses: supercharge/mongodb-github-action@310bd1bbeb878d9de3e54ee492cbd9643b1e8875
       uses: supercharge/mongodb-github-action@1.3.0
       with:
-        mongodb-version: ${{ matrix.mongodb-version }}
+        # MongoDB version to use (default "latest")
+        mongodb-version: latest# optional, default is latest
 
     - name: Install dependencies
       shell: bash
@@ -61,6 +63,12 @@ jobs:
         make -j 2
         make install
         cd $CURRENT
+        
+    - name: Lint
+      shell: bash
+      run: |
+        pip install cpplint
+        cpplint --recursive .
         
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
