--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -13,6 +13,9 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        mongodb-version: [4.4]
     services:
           # Label used to access the service container
           redis:
@@ -36,14 +39,10 @@ jobs:
       # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory ${{runner.workspace}}/build
       
-    - name: MongoDB in GitHub Actions
-      # You may pin to the exact commit or the version.
-      #https://github.com/supercharge/mongodb-github-action
-      # uses: supercharge/mongodb-github-action@310bd1bbeb878d9de3e54ee492cbd9643b1e8875
+    - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.3.0
       with:
-        # MongoDB version to use (default "latest")
-        mongodb-version: latest# optional, default is latest
+        mongodb-version: ${{ matrix.mongodb-version }}
 
     - name: Install dependencies
       shell: bash
