--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -18,4 +18,7 @@ foreach (test_file ${test_files})
     target_link_libraries(${exec} ${LIBS})
     target_link_libraries(${exec} symbios)
     set_target_properties(${exec} PROPERTIES FOLDER test/integration)
+    set(test_name ${test_file}_test)
+    add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/integration/${exec} ${test_parameters})
+    set_tests_properties(${test_name} PROPERTIES WILL_FAIL false)
 endforeach ()
