--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -83,9 +83,9 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config $
-      
-
+      run: |
+        export INSTALL_DIR=$HOME/work/software/install
+        cmake --build . --config $
     - name: Test
       working-directory: ${{runner.workspace}}/build
       shell: bash
