changes to make HCL always enabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ set(INCLUDE_DIRS "-I${INSTALL_DIR}/include/ -L${INSTALL_DIR}/lib/")# -DRPCLIB_EN
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${INCLUDE_DIRS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${INCLUDE_DIRS}")
 
-# External libraries hermes is dependent on.
-option(COMPILE_HCL "Compile and install HCL" OFF)
+# External libraries symbios is dependent on.
+option(COMPILE_HCL "Compile and install HCL" ON)
 if(COMPILE_HCL)
     add_subdirectory(hcl)
 endif()
