--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${INCLUDE_DIRS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${INCLUDE_DIRS}")
 
 # External libraries hermes is dependent on.
-option(COMPILE_HCL "Compile and install HCL" OFF)
+option(COMPILE_HCL "Compile and install HCL" ON)
 if(COMPILE_HCL)
     add_subdirectory(hcl)
 endif()
