--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,6 +32,8 @@ jobs:
               - 6379:6379
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: 'true'
     - uses: actions/setup-python@v1
       
     - name: Create Build Environment
