Set up HCL compilation from submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
 project(symbios)
 set(INSTALL_DIR $ENV{INSTALL_DIR})
-message(info ${INSTALL_DIR})
+#string(REPLACE ":" "/;" MODULE_LIST $ENV{PATH})
+#string(REPLACE ":" "/;" MODULE_LIB_LIST $ENV{LD_LIBRARY_PATH})
+#message(install_dir: ${INSTALL_DIR})
+#message(module_lsit ${MODULE_LIST})
+#message(module_lib_list ${MODULE_LIB_LIST})
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DH5_HAVE_DIRECT -w")
-set(INCLUDE_DIRS "-I${INSTALL_DIR}/include/ -L${INSTALL_DIR}/lib/")# -DRPCLIB_ENABLE_LOGGING -DRPCLIB_ASIO=clmdep_asio -DRPCLIB_FMT=clmdep_fmt")
+set(INCLUDE_DIRS "-I${INSTALL_DIR}/include/ -L${INSTALL_DIR}/lib/ -L${PROJECT_SOURCE_DIR}/hcl/") # -I${MODULE_LIST} -L${MODULE_LIB_LIST}")# -DRPCLIB_ENABLE_LOGGING -DRPCLIB_ASIO=clmdep_asio -DRPCLIB_FMT=clmdep_fmt")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${INCLUDE_DIRS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${INCLUDE_DIRS}")
 
@@ -25,6 +29,7 @@ set(SYMBIOS_LIB_SRC ${SYMBIOS_COMMON_SRC} include/symbios/client.h src/client/cl
 
 # add symbios lib
 add_library(symbios SHARED ${SYMBIOS_LIB_SRC})
+add_dependencies(symbios basket)
 # TODO: add any required libraries
 
 # add symbios server
