--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -15,12 +15,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 
 # Source Files
 add_executable(benchmark src/benchmark.cpp)
+target_link_libraries(benchmark -lmpi)
 
 option(BUILD_TEST "Build the unit tests" ON)
 if(BUILD_TEST)
     enable_testing()
     include(CTest)
-    add_subdirectory(test)
     add_test(NAME benchmark-usage COMMAND ${CMAKE_CURRENT_BINARY_DIR}/benchmark)
     add_test(NAME benchmark-prealloc COMMAND ${CMAKE_CURRENT_BINARY_DIR}/benchmark -w io-only -s orangefs -caddr ~/ -p 1m)
 endif()
