--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -14,7 +14,7 @@ include_directories(include)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 
 # Source Files
-add_executable(benchmark src/benchmark.cpp)
+add_executable(benchmark src/benchmark.cpp include/benchmark/rng.h)
 target_link_libraries(benchmark -lmpi)
 
 option(BUILD_TEST "Build the unit tests" ON)
