--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -77,6 +77,7 @@ jobs:
         wget https://github.com/rpclib/rpclib/archive/v2.2.1.tar.gz
         tar -xvf v2.2.1.tar.gz
         cd rpclib-2.2.1
+        sed -i 's/add_library(${PROJECT_NAME}/add_library(${PROJECT_NAME} SHARED/g' CMakeLists.txt
         mkdir build
         cd build
         cmake -DCMAKE_INSTALL_PREFIX=${SOFTWARE_DIR}/install ../
