--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -110,10 +110,15 @@ jobs:
       run: |
         export INSTALL_DIR=$HOME/work/software/install
         export LD_LIBRARY_PATH=$HOME/work/software/install/lib
+        export PATH="${INSTALL_DIR}/bin:${INSTALL_DIR}/sbin:$PATH"
         cmake --build . --config $
     - name: Test
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
+      run: |
+        export INSTALL_DIR=$HOME/work/software/install
+        export LD_LIBRARY_PATH=$HOME/work/software/install/lib
+        export PATH="${INSTALL_DIR}/bin:${INSTALL_DIR}/sbin:$PATH"
+        ctest -C $BUILD_TYPE
