--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -101,6 +101,7 @@ jobs:
       run: |
         export INSTALL_DIR=$HOME/work/software/install
         export LD_LIBRARY_PATH=$HOME/work/software/install/lib
+        git submodule sync
         cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
     - name: Build
