--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,10 +32,11 @@ jobs:
               - 6379:6379
     steps:
     - uses: actions/checkout@v2
-      with:
-        submodules: 'true'
     - uses: actions/setup-python@v1
-      
+    - name: Checkout submodule
+      run: |
+        git submodule sync
+        git submodule update --init --recursive  
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
