--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHERMES_TRACE")
 # Source files
 set(SYMBIOS_COMMON_SRC include/symbios/common/data_structure.h include/symbios/common/configuration_manager.h)
 set(SYMBIOS_LIB_SRC ${SYMBIOS_COMMON_SRC} include/symbios/client/client.h src/symbios/client/client.cpp
-        src/symbios/client/Posix.cpp src/symbios/server/Daemon.cpp include/symbios/server/Daemon.h)
+        src/symbios/client/posix.cpp )
 
 # add symbios lib
 add_library(symbios SHARED ${SYMBIOS_LIB_SRC})
@@ -39,10 +39,10 @@ target_link_libraries(symbios basket)
 # TODO: add any required libraries
 
 # add symbios server
-set(SYMBIOS_SERVER_SRC ${SYMBIOS_COMMON_SRC} include/symbios/server/server.h src/symbios/server/main.cpp
+set(SYMBIOS_SERVER_SRC ${SYMBIOS_COMMON_SRC} src/symbios/server/server.h src/symbios/server/main.cpp
         src/symbios/server/server.cpp src/symbios/io_clients/io.h src/symbios/io_clients/io_factory.h
         src/symbios/io_clients/file_io.h src/symbios/io_clients/object_store_io.h src/symbios/io_clients/redis_io.h
-        src/symbios/io_clients/mongo_io.h)
+        src/symbios/io_clients/mongo_io.h src/symbios/server/daemon.cpp src/symbios/server/daemon.h)
 
 add_executable(symbios_server ${SYMBIOS_SERVER_SRC})
 add_dependencies(symbios_server symbios)
