--- a/conf/symbios.conf
+++ b/conf/symbios.conf
@@ -3,4 +3,11 @@
   "CLIENT_LISTS": "/tmp/tmp.BUKlhPiLxF/conf/server_lists/symbios_client" ,
   "SYMBIOS_PORT": 8000,
   "SERVER_RPC_THREADS": 4,
+  "SERVER_DIR": "/dev/shm/hari/symbios_server",
+  "SERVER_COUNT": 1,
+  "REDIS_CLUSTER_HOST": "127.0.0.1",
+  "REDIS_CLUSTER_PORT": 6379,
+  "MONGO_CLUSTER_URL": "mongodb://localhost:27017",
+  "MONGO_CLUSTER_DATABASE": "mydb",
+  "MONGO_CLUSTER_COLLECTION":"test"
 }
