--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(${INSTALL_DIR}/include/)
 set(CMAKE_CXX_STANDARD 17)
 
 
-set(LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lmpi -lpthread -ldl)
+set(LIBS -L${INSTALL_DIR}/lib64 -L${INSTALL_DIR}/lib -L${INSTALL_DIR}/lib -lmpi -lpthread -ldl -lbasket)
 include_directories(${CMAKE_SOURCE_DIR})
 set(CTEST_ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/")
 set($ENV{LD_PRELOAD} "$ENV{LD_PRELOAD} ${CMAKE_BINARY_DIR}")
@@ -17,13 +17,13 @@ set(test_files  client
                 server
                 storage_cost_predictor)
 foreach (test_file ${test_files})
-    set(exec ${test_file})
+    set(exec unit_${test_file})
     add_executable(${exec} ${test_file}/test.cpp)
     add_dependencies(${exec} symbios)
     target_include_directories(${exec} PRIVATE "${CMAKE_BINARY_DIR}/")
     target_link_libraries(${exec} ${LIBS})
     target_link_libraries(${exec} symbios)
-    set_target_properties(${exec} PROPERTIES FOLDER test/unit)
+    #set_target_properties(${exec} PROPERTIES FOLDER test/unit)
     set(test_parameters )
     set(test_name ${test_file}_test)
     add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/unit/${exec} ${test_parameters})
