Use 1 for wfrac and rfrac

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -62,11 +62,11 @@ add_custom_target(ares-terminate-hdd-4
         ${SCRIPT_ROOT}/hostfiles/hostfile_clients)
 
 #OrangeFS I/O-intensive test cases (ares)
-function(io_test nprocs storage_type cport block_size file_size total_io access_pattern wfrac rfrac config)
-    add_test(aresbm_${nprocs}_${storage_type}_${cport}_${block_size}_${file_size}_${total_io}_${access_pattern}_${wfrac}_${rfrac}_${config} COMMAND
+function(io_test nprocs storage_type cport block_size file_size total_io access_pattern config)
+    add_test(aresbm_${nprocs}_${storage_type}_${cport}_${block_size}_${file_size}_${total_io}_${access_pattern}_${config} COMMAND
             mpirun -n ${nprocs} ${CMAKE_CURRENT_BINARY_DIR}/benchmark
             -s ${storage_type} -caddr /mnt/nvme/llogan/write/generic -cport ${cport} -path /test.bin
-            -w io-only -ap ${access_pattern} -bs ${block_size} -fs ${file_size} -tot ${total_io} -wfrac ${wfrac} -rfrac ${rfrac}
+            -w io-only -ap ${access_pattern} -bs ${block_size} -fs ${file_size} -tot ${total_io} -wfrac 1 -rfrac 1
             -out ~/test_${config}.csv; rm -rf /mnt/nvme/llogan/write/generic/*)
 endfunction()
 
@@ -77,8 +77,6 @@ set(BLOCK_SIZES 1b 64b 512b 1k 4k 64k 256k 512k 1m 2m 4m 8m 16m)
 set(FILE_SIZES 128g 128g 128g 128g 128g 128g 128g 128g 128g 128g 128g 128g 128g)
 set(TOTAL_IOS 256k 512k 1m 2m 128m 256m 512m 1g 4g 8g 64g 128g 256g)
 set(ACCESS_PATTERNS seq uniform)
-set(WFRACS 1 .5)
-set(RFRACS 0 .5)
 set(CONFIGS hdd4_basic hdd4_read hdd4_write ssd4_basic ssd4_read ssd4_write nvme4_basic hdd24_basic)
 
 foreach(NPROC ${PROCS})
@@ -94,14 +92,8 @@ foreach(NPROC ${PROCS})
             list(GET FILE_SIZES ${BS_IDX} FILE_SIZE)
             list(GET TOTAL_IOS ${BS_IDX} TOTAL_IO)
             foreach(ACCESS_PATTERN ${ACCESS_PATTERNS})
-                list(LENGTH WFRACS WFRACS_LEN)
-                math(EXPR WFRACS_LAST "${WFRACS_LEN} - 1")
-                foreach(WF_IDX RANGE ${WFRACS_LAST})
-                    list(GET WFRACS ${WF_IDX} WFRAC)
-                    list(GET RFRACS ${WF_IDX} RFRAC)
-                    foreach(CONFIG ${CONFIGS})
-                        io_test(${NPROC} ${STORAGE_TYPE} ${PORT} ${BLOCK_SIZE} ${FILE_SIZE} ${TOTAL_IO} ${ACCESS_PATTERN} ${WFRAC} ${RFRAC} ${CONFIG})
-                    endforeach()
+                foreach(CONFIG ${CONFIGS})
+                    io_test(${NPROC} ${STORAGE_TYPE} ${PORT} ${BLOCK_SIZE} ${FILE_SIZE} ${TOTAL_IO} ${ACCESS_PATTERN} ${CONFIG})
                 endforeach()
             endforeach()
         endforeach()
