Add NAME to add_test

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -63,13 +63,13 @@ add_custom_target(ares-terminate-hdd-4
 
 #OrangeFS I/O-intensive test cases (ares)
 function(prealloc nprocs storage_type caddr cport file_size)
-    add_test(prealloc_${nprocs}_${storage_type}_${file_size} COMMAND
+    add_test(NAME prealloc_${nprocs}_${storage_type}_${file_size} COMMAND
             mpirun -n ${nprocs} ${CMAKE_CURRENT_BINARY_DIR}/benchmark
             -s ${storage_type} -caddr ${caddr} -cport ${cport} -path /test.bin
             -w prealloc -fs ${file_size})
 endfunction()
 function(io_test nprocs storage_type caddr cport block_size file_size total_io access_pattern wfrac rfrac config)
-    add_test(aresbm_${nprocs}_${storage_type}_${cport}_${block_size}_${file_size}_${total_io}_${access_pattern}_${wfrac}_${rfrac}_${config} COMMAND
+    add_test(NAME aresbm_${nprocs}_${storage_type}_${cport}_${block_size}_${file_size}_${total_io}_${access_pattern}_${wfrac}_${rfrac}_${config} COMMAND
             mpirun -n ${nprocs} ${CMAKE_CURRENT_BINARY_DIR}/benchmark
             -s ${storage_type} -caddr ${caddr} -cport ${cport} -path /test.bin
             -w io-only -ap ${access_pattern} -bs ${block_size} -fs ${file_size} -tot ${total_io} -wfrac ${wfrac} -rfrac ${rfrac}
